[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Player/RigidBodyPlayer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player/PlayerBodyShape.tres" type="Shape" id=2]
[ext_resource path="res://Scenes/Player/Camera/PlayerCamera.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=4]
resource_name = "Jogging"
length = 0.3

[sub_resource type="Animation" id=3]
resource_name = "Walking"
length = 0.6

[sub_resource type="CapsuleMesh" id=21]
radius = 0.25
mid_height = 0.8
radial_segments = 16

[node name="Player" type="RigidBody"]
collision_layer = 8
mass = 150.0
can_sleep = false
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875203, -0.0508485 )

[node name="PlayerCamera" parent="Pivot" instance=ExtResource( 3 )]
far = 1024.0

[node name="FootstepsAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/Jogging = SubResource( 4 )
anims/Walking = SubResource( 3 )

[node name="Legs" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9889, 0 )

[node name="LeftRayCast" type="RayCast" parent="Legs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( -0.4, -1.2, 0 )

[node name="RightRayCast" type="RayCast" parent="Legs"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
enabled = true
cast_to = Vector3( 0.4, -1.2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.120315, 0 )
visible = false
mesh = SubResource( 21 )
